--- a/environment.yml
+++ b/environment.yml
@@ -2,8 +2,7 @@ name: stat_reth_2
 channels:
   - anaconda
   - conda-forge
-  - numba
-  - defaults
+  - edderic
 dependencies:
   - coiled=0.0.52
   - dask=2021.8.0
@@ -13,3 +12,4 @@ dependencies:
   - pandas=1.3.1
   - python=3.9.5
   - seaborn=0.11.2
+  - unlikely
